# speedups

./: README.md  pyproject.toml
src/speedups/: cpp_utils.py  graphs.py  main.py  tkinter_utils.py
src/speedups/cpp/: vectorParalelo.cpp  vectorSecuencial.cpp
