[tool.poetry]
name = "speedups"
version = "0.1.0"
description = ""
authors = ["Julian Quispe <julianmql@hotmail.com>"]
readme = "README.md"
packages = [{include = "speedups", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
